# linux_internals

./: .gitignore  CMakeLists.txt  main.cpp  pch.h
docs/: building_kernel_for_kernel_module_development.md
samples/: process.cpp
